src/test/ui/liveness/liveness-move-call-arg.nll.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/liveness-move-call-arg.rs:9:14
   |
LL |         take(x); //~ ERROR use of moved value: `x`
   |              ^ value moved here, in previous iteration of loop
   |
   = note: move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
